--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,16 @@ repositories {
 
 dependencies {
 	providedCompile "javax.servlet:servlet-api:2.5"
+	compile group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.0'
 	compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
 	compile 'org.hsqldb:hsqldb:2.3.1'
 	compile 'org.springframework:spring-jdbc:4.1.0.RELEASE'
 	compile 'log4j:log4j:1.2.17'
 	compile 'org.slf4j:slf4j-api:1.7.5'
 	compile 'org.slf4j:slf4j-log4j12:1.7.5'
+	compile 'org.hibernate:hibernate-core:4.3.6.Final'
+    compile 'org.hibernate:hibernate-entitymanager:4.3.6.Final'
+    compile 'org.hibernate:hibernate-validator:5.1.1.Final'
 	runtime 'com.fasterxml.jackson.core:jackson-core:2.2.2'
 	runtime 'com.fasterxml.jackson.core:jackson-databind:2.2.2'
 
